# mHC-RL

./: .gitignore  CLAUDE.md  README.md  nia-sources.md  prd-2.md  pyproject.toml
.cursor/rules/: nia.mdc
controller/: model_loader.py  policy.py
data/: gsm8k_test.jsonl  svamp_test.jsonl
envs/: __init__.py  gsm8k_env.py
nanochat/: README.md
nanochat-mHC/: experiments.md  pyproject.toml  sanity_mhc.sh  setup_gpu.sh  speedrun_mhc.sh
nanochat-mHC/configs/: default.yaml  mhc_sanity.yaml  static_mhc_d20.yaml  static_mhc_d20_full.yaml
nanochat-mHC/nanochat/: adamw.py  common.py  engine.py  gpt.py  mhc.py  muon.py
nanochat-mHC/nanochat/mhc/: __init__.py
nanochat-mHC/nanochat/mhc/dynamic/: __init__.py
nanochat-mHC/nanochat/mhc/static/: __init__.py  mhc.py
nanochat-mHC/rustbpe/src/: lib.rs
nanochat-mHC/scripts/: base_train.py  mid_train.py
nanochat/nanochat/: dataloader.py  gpt.py  mhc.py
nanochat/scripts/: base_train.py  chat_rl.py  chat_sft.py  preflight_check.py  test_mhc_integration.py  tok_train.py
routing/: mixing_ops.py
scripts/: prepare_data.py  test_env.py  test_routing.py
tests/: __init__.py  test_routing_comprehensive.py
train/: eval.py
